syntax = "proto3";
option go_package = "./everphone";

service Everphone {
  rpc RandomText(EverphoneRandomTextInput) returns (EverphoneRandomTextOutput);
}

message EverphoneRandomTextInput {
  string Text = 1;
}

message EverphoneRandomTextOutput {
  string Text = 1;
}